--- a/HW/HW1/HW1(DATA118).ipynb
+++ b/HW/HW1/HW1(DATA118).ipynb
@@ -33,7 +33,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np \n",
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
    "metadata": {
     "id": "M-ftgmNO0j-0"
    },
