--- a/HW/HW5/homework05_winter24.ipynb
+++ b/HW/HW5/homework05_winter24.ipynb
@@ -35,26 +35,11 @@
    "metadata": {
     "id": "c9363a96"
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/s_/fr0jyz7s5qv1_648_n3yrj940000gn/T/ipykernel_17592/560453183.py:1: DeprecationWarning: \n",
-      "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
-      "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
-      "but was not found to be installed on your system.\n",
-      "If this would cause problems for you,\n",
-      "please provide us feedback at https://github.com/pandas-dev/pandas/issues/54466\n",
-      "        \n",
-      "  import pandas as pd\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "\n",
+    "import math as math\n",
     "import matplotlib\n",
     "from matplotlib import pyplot as plt"
    ]
@@ -454,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "id": "7f78b5a5",
    "metadata": {},
    "outputs": [
@@ -462,7 +447,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/s_/fr0jyz7s5qv1_648_n3yrj940000gn/T/ipykernel_11253/111834190.py:4: DeprecationWarning: `np.math` is a deprecated alias for the standard library `math` module (Deprecated Numpy 1.25). Replace usages of `np.math` with `math`\n",
+      "/var/folders/s_/fr0jyz7s5qv1_648_n3yrj940000gn/T/ipykernel_21661/111834190.py:4: DeprecationWarning: `np.math` is a deprecated alias for the standard library `math` module (Deprecated Numpy 1.25). Replace usages of `np.math` with `math`\n",
       "  n_choose_j = np.math.factorial(n)/(np.math.factorial(j)*np.math.factorial(n-j))\n"
      ]
     },
@@ -472,7 +457,7 @@
        "0.15625"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
