--- a/HW/HW6/homework06_winter24.ipynb
+++ b/HW/HW6/homework06_winter24.ipynb
@@ -43,7 +43,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 3,
       "metadata": {
         "id": "yegbh6zA0PPP"
       },
@@ -54,7 +54,6 @@
         "import numpy as np\n",
         "import pandas as pd\n",
         "\n",
-        "%matplotlib inline\n",
         "import matplotlib.pyplot as plt\n",
         "plt.style.use('fivethirtyeight')\n",
         "import warnings\n",
@@ -89,14 +88,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 39,
       "metadata": {
         "id": "4EdtdODAIlLk"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "0.020206000000000002"
+            ]
+          },
+          "execution_count": 39,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
-        "...\n",
-        "chance_to_find_syringe = ...\n",
+        "outcomes = []\n",
+        "for i in range(10000):\n",
+        "    num_failed = np.random.choice(['Fail', 'Pass'], 50, p=[0.02, 0.98]).tolist().count('Fail') / 50\n",
+        "    outcomes.append(num_failed)\n",
+        "\n",
+        "chance_to_find_syringe = np.mean(outcomes)\n",
         "chance_to_find_syringe"
       ]
     },
@@ -106,7 +120,7 @@
         "id": "MhzRdU9rIlLl"
       },
       "source": [
-        "*Answer here*"
+        "This follows a binomial distribution since there is a binary outcome, draws are independent, and the probability of success does nto change between draws. The chance to find a syringe is approximately 0.02021"
       ]
     },
     {
@@ -119,15 +133,51 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "$(0.02)^n$ is the probability of getting all faulty syringes when drawing n syringes. \n",
+        "\n",
+        "$(0.98)^n$ is the probability of getting all good syringes (no faulty)when drawing n syringes.\n",
+        "\n",
+        "$1 - (0.98)^n$ is the probability of getting at least one faulty.\n",
+        "\n",
+        "Explanation: If we flip a coin five times, the probability of getting all heads (HHHHH) is $(0.5)^n$.\n",
+        "That means the complement of NOT getting all heads is the probability of literally anything else, $1-(0.5)^n$, which will \n",
+        "always include a tails (THHHH, TTTTT, HHHTH, etc.). Analogous to this, the probability of getting at least one faulty is the \n",
+        "complement of the probability of getting all good syringes"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "$$1-(0.98)^n >= 0.75$$\n",
+        "$$0.98^n >= 0.25$$\n",
+        "$$n >= \\frac{\\ln(0.25)}{\\ln(0.98)} >= 68.619$$\n",
+        "$$n>=69$$\n"
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 57,
       "metadata": {
         "id": "GCHsvyoNIlLl"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "69"
+            ]
+          },
+          "execution_count": 57,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
-        "...\n",
-        "num_required_for_75_percent = ...\n",
+        "num_required_for_75_percent = 69\n",
         "num_required_for_75_percent"
       ]
     },
@@ -138,6 +188,44 @@
       },
       "source": [
         "*Answer here*"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 44,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "0\n",
+            "1\n"
+          ]
+        }
+      ],
+      "source": [
+        "for i, index in enumerate(range(2)):\n",
+        "    print(index)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 50,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "0\n",
+            "1\n"
+          ]
+        }
+      ],
+      "source": [
+        "for i in range(2):\n",
+        "    print(i)"
       ]
     },
     {
