--- a/LECTURES/Lecture_09_probability.ipynb
+++ b/LECTURES/Lecture_09_probability.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "id": "cbc7e1d0",
    "metadata": {},
    "outputs": [],
@@ -35,7 +35,7 @@
     "import pandas as pd\n",
     "\n",
     "\n",
-    "%matplotlib inline\n",
+    "\n",
     "import matplotlib.pyplot as plt\n",
     "plt.style.use('fivethirtyeight')"
    ]
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "id": "b077df67",
    "metadata": {
     "slideshow": {
@@ -162,7 +162,7 @@
        "array([1, 2, 3, 4, 5, 6])"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "id": "d6f40198",
    "metadata": {
     "slideshow": {
@@ -201,16 +201,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[6]\n"
+      "[1]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "1"
+       "0"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "id": "34499b24",
    "metadata": {
     "slideshow": {
@@ -256,7 +256,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1 6]\n"
+      "[2 6]\n"
      ]
     },
     {
@@ -266,7 +266,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[8], line 8\u001b[0m\n\u001b[1;32m      5\u001b[0m two_rolls \u001b[38;5;241m>\u001b[39m\u001b[38;5;241m3\u001b[39m\n\u001b[1;32m      7\u001b[0m count \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0\u001b[39m\n\u001b[0;32m----> 8\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m two_rolls\u001b[38;5;241m>\u001b[39m\u001b[38;5;241m3\u001b[39m:\n\u001b[1;32m      9\u001b[0m     count \u001b[38;5;241m=\u001b[39m count \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m1\u001b[39m\n\u001b[1;32m     11\u001b[0m count\n",
+      "Cell \u001b[0;32mIn[11], line 8\u001b[0m\n\u001b[1;32m      5\u001b[0m two_rolls \u001b[38;5;241m>\u001b[39m\u001b[38;5;241m3\u001b[39m\n\u001b[1;32m      7\u001b[0m count \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0\u001b[39m\n\u001b[0;32m----> 8\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m two_rolls\u001b[38;5;241m>\u001b[39m\u001b[38;5;241m3\u001b[39m:\n\u001b[1;32m      9\u001b[0m     count \u001b[38;5;241m=\u001b[39m count \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m1\u001b[39m\n\u001b[1;32m     11\u001b[0m count\n",
       "\u001b[0;31mValueError\u001b[0m: The truth value of an array with more than one element is ambiguous. Use a.any() or a.all()"
      ]
     }
@@ -371,7 +371,19 @@
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'die' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[3], line 6\u001b[0m\n\u001b[1;32m      2\u001b[0m num_experiments \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1000\u001b[39m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m np\u001b[38;5;241m.\u001b[39marange(num_experiments): \u001b[38;5;66;03m#this goes from 0 to 999\u001b[39;00m\n\u001b[0;32m----> 6\u001b[0m     n_rolls \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mrandom\u001b[38;5;241m.\u001b[39mchoice(\u001b[43mdie\u001b[49m, \u001b[38;5;241m100\u001b[39m)\n\u001b[1;32m      7\u001b[0m     stored_values\u001b[38;5;241m.\u001b[39mappend(\u001b[38;5;28msum\u001b[39m(n_rolls \u001b[38;5;241m>\u001b[39m\u001b[38;5;241m3\u001b[39m))\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'die' is not defined"
+     ]
+    }
+   ],
    "source": [
     "stored_values = []\n",
     "num_experiments = 1000\n",
@@ -391,7 +403,19 @@
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'num_experiments' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[2], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m pd\u001b[38;5;241m.\u001b[39mDataFrame({\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m# Rolls > 3 out of 100 \u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m Repeated \u001b[39m\u001b[38;5;124m'\u001b[39m \u001b[38;5;241m+\u001b[39m\u001b[38;5;28mstr\u001b[39m(\u001b[43mnum_experiments\u001b[49m) \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m times\u001b[39m\u001b[38;5;124m'\u001b[39m: stored_values})\u001b[38;5;241m.\u001b[39mhist(bins\u001b[38;5;241m=\u001b[39mnp\u001b[38;5;241m.\u001b[39marange(\u001b[38;5;241m30\u001b[39m, \u001b[38;5;241m75\u001b[39m,\u001b[38;5;241m2\u001b[39m));\n\u001b[1;32m      2\u001b[0m plt\u001b[38;5;241m.\u001b[39mxlabel(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mNumber of Rolls\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m      3\u001b[0m plt\u001b[38;5;241m.\u001b[39mylabel(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mFrequency\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'num_experiments' is not defined"
+     ]
+    }
+   ],
    "source": [
     "pd.DataFrame({'# Rolls > 3 out of 100 \\n Repeated ' +str(num_experiments) + ' times': stored_values}).hist(bins=np.arange(30, 75,2));\n",
     "plt.xlabel('Number of Rolls')\n",
@@ -1198,8 +1222,8 @@
     }
    },
    "source": [
-    "- $\\mbox{P}(A \\cup B) = \\mbox{P}(A) +\n",
-    "\\mbox{P}(B) - \\mbox{P}(A \\cap B)$   **True in general!!**"
+    "- $\\text{P}(A \\cup B) = \\text{P}(A) +\n",
+    "\\text{P}(B) - \\text{P}(A \\cap B)$   **True in general!!**"
    ]
   },
   {
@@ -1271,7 +1295,7 @@
     "Instead of computing the probability of an event directly, we can calculate the probability of everything else:\n",
     "For any event E, \n",
     "\n",
-    "$\\mbox{P}(E^C) = 1 - \\mbox{P}(E)$"
+    "$\\text{P}(E^C) = 1 - \\text{P}(E)$"
    ]
   },
   {
@@ -1303,14 +1327,14 @@
    "source": [
     "## Basic Probability Rules\n",
     "\n",
-    "-  $\\mbox{P}(E^C) = 1 - \\mbox{P}(E)$ for any event $E$\n",
+    "-  $\\text{P}(E^C) = 1 - \\text{P}(E)$ for any event $E$\n",
     "\n",
-    "- $\\mbox{P}(A \\cup B) = \\mbox{P}(A) +\n",
-    "\\mbox{P}(B) - \\mbox{P}(A \\cap B)$\n",
+    "- $\\text{P}(A \\cup B) = \\text{P}(A) +\n",
+    "\\text{P}(B) - \\text{P}(A \\cap B)$\n",
     "\n",
     "\n",
     "- Given two **independent** events, \n",
-    "$\\mbox{P}(A \\cap B) = \\mbox{P}(A)\\mbox{P}(B)$"
+    "$\\text{P}(A \\cap B) = \\text{P}(A)\\text{P}(B)$"
    ]
   },
   {
@@ -1382,8 +1406,8 @@
    "source": [
     "\n",
     "\n",
-    "If $\\mbox{P}(A) \\ne 0$, the **conditional probability** of event $A$\n",
-    "given $B$ has occurred, denoted by $\\mbox{P}(A|B)$, is defined by,\n",
+    "If $\\text{P}(A) \\ne 0$, the **conditional probability** of event $A$\n",
+    "given $B$ has occurred, denoted by $\\text{P}(A|B)$, is defined by,\n",
     "\n",
     "$$ P(A|B) = \\frac{P(B \\text{ and } A)}{P(B)}$$\n",
     "\n",
@@ -1432,7 +1456,7 @@
     }
    },
    "source": [
-    "**Multiplication rule**: $\\mbox{P}(A \\mbox{ and } B) = \\mbox{P}(A|B) \\mbox{P}(B)$. Note that this follows directly from the definition of conditional probability."
+    "**Multiplication rule**: $\\text{P}(A \\text{ and } B) = \\text{P}(A|B) \\text{P}(B)$. Note that this follows directly from the definition of conditional probability."
    ]
   },
   {
@@ -1445,10 +1469,10 @@
    },
    "source": [
     "**If two events are independent**, where knowledge that an event $B$ has occured does not effect the probability that some other event A occurs then \n",
-    "$\\mbox{P}(A|B) =\\mbox{P}(A)$ (or equivalently, $\\mbox{P}(B|A) = \\mbox{P}(B)$)\n",
+    "$\\text{P}(A|B) =\\text{P}(A)$ (or equivalently, $\\text{P}(B|A) = \\text{P}(B)$)\n",
     "\n",
     "Equivalent condition for **independence**: \n",
-    "$$\\mbox{P}(A \\mbox{ and } B)= \\mbox{P}(A \\cap B)  = \\mbox{P}(A) \\mbox{P}(B)$$\n",
+    "$$\\text{P}(A \\text{ and } B)= \\text{P}(A \\cap B)  = \\text{P}(A) \\text{P}(B)$$\n",
     "\n",
     "Hence to check for independence we can check for any of the following:\n"
    ]
@@ -1739,6 +1763,14 @@
    "source": [
     "die.sample(100, replace = True)  #this creates a new dataframe with 100 number of rows"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "89ee47af",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
