--- a/LECTURES/Lecture_14_Bootstrap_II (1).ipynb
+++ b/LECTURES/Lecture_14_Bootstrap_II (1).ipynb
@@ -487,7 +487,7 @@
    },
    "outputs": [],
    "source": [
-    "left = np.percentile(bstrap_means, ???)\n",
+    "left = np.percentile(bstrap_means, 0.5)\n",
     "left"
    ]
   },
@@ -502,7 +502,7 @@
    },
    "outputs": [],
    "source": [
-    "right = np.percentile(bstrap_means,???)\n",
+    "right = np.percentile(bstrap_means,99.5)\n",
     "right"
    ]
   },
@@ -1086,7 +1086,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
