Finished some stuff

--- a/HW/HW6/homework06_winter24.ipynb
+++ b/HW/HW6/homework06_winter24.ipynb
@@ -43,7 +43,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 3,
       "metadata": {
         "id": "yegbh6zA0PPP"
       },
@@ -251,7 +251,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -363,7 +363,7 @@
               "4                         93            False  "
             ]
           },
-          "execution_count": 5,
+          "execution_count": 4,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -372,6 +372,26 @@
         "baby_df = pd.read_csv('baby.csv')\n",
         "print(baby_df.shape)\n",
         "baby_df.head(5)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 14,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "58256"
+            ]
+          },
+          "execution_count": 14,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "sum(baby_df.loc[baby_df['Maternal Smoker'] == True]['Maternal Pregnancy Weight'])"
       ]
     },
     {
